# neatlogs

./: .gitignore  CLAUDE.md  README.MD  pyproject.toml  pytest.ini
examples/: README.md  anthropic.py  azure_openai.py  azure_openai_agents.py  crewai.py  google_genai.py  langchain.py  langchain_example.py  langgraph.py  openai_agents.py  openai_sdk.py  usage.py
neatlogs/: README.md  __init__.py  core.py  new_core.py  requirements.txt  semconv.py  stream_wrapper.py
neatlogs/event_handlers/: anthropic.py  base.py  crewai.py  google_genai.py  langgraph.py  litellm.py  openai.py
neatlogs/instrumentation/: manager.py
neatlogs/integration/callbacks/langchain/: __init__.py
neatlogs/otel/: __init__.py  new_processor.py  processor.py
tests/: README.md  __init__.py  conftest.py  test_openai_instrumentation.py
tools/: dev_server.py
