[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neatlogs"
version = "1.1.7"
description = "A Python package for extracting and managing LLM logs to build a collaborative workspace"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Neatlogs", email = "hello@neatlogs.com"}
]
keywords = ["llm", "tracking", "monitoring", "logging", "ai", "machine-learning", "observability", "collboration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "openai-agents>=0.6.2",
    "openinference-instrumentation>=0.1.27",
    "openinference-instrumentation-openai-agents>=1.4.0",
    "openinference-semantic-conventions>=0.1.13",
    "opentelemetry-api>=1.33.1",
    "opentelemetry-exporter-otlp-proto-http>=1.33.1",
    "opentelemetry-sdk>=1.33.1",
    "requests>=2.31.0",
]
[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
    "openinference-instrumentation-openai>=0.1.32",
]
langchain = [
    "langchain>=0.1.0",
    "openinference-instrumentation-langchain>=0.1.52",
]
litellm = [
    "litellm>=1.0.0",
    "openinference-instrumentation-litellm>=0.1.6",
]
google-genai = [
    "google-generativeai>=0.3.0",
    "openinference-instrumentation-google-genai>=0.1.1",
]
langgraph = [
    "langgraph>=0.1.0",
    "openinference-instrumentation-langchain>=0.1.0",
]
crewai = ["openinference-instrumentation-crewai>=0.1.0"]
openai-agents = [
    "openai-agents>=0.1.0",
    "openinference-instrumentation-openai-agents>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/NeatLogs/neatlogs"
Repository = "https://github.com/NeatLogs/neatlogs.git"
Issues = "https://github.com/NeatLogs/neatlogs/issues"
Documentation = "https://docs.neatlogs.com/"

[tool.setuptools.packages.find]
where = ["."]
include = ["neatlogs"]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.124.0",
    "opentelemetry-proto>=1.33.1",
    "protobuf>=4.0.0",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "respx>=0.20.0",
]
